[gd_scene load_steps=13 format=3 uid="uid://dur30ro65vntf"]

[ext_resource type="Script" uid="uid://s01mj2vi4yj8" path="res://Prefabs/Robot2/robot2.gd" id="1_svyyx"]
[ext_resource type="Script" uid="uid://dyxuh253xw2l6" path="res://Prefabs/Robot2/FPV_camera.gd" id="2_bfb71"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_svyyx"]
albedo_color = Color(0.258874, 0.447733, 0.450433, 1)

[sub_resource type="BoxMesh" id="BoxMesh_br0rw"]
material = SubResource("StandardMaterial3D_svyyx")
size = Vector3(0.5, 0.2, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_svyyx"]
points = PackedVector3Array(0.25, 0.1, 0.5, 0.25, -0.1, 0.5, 0.25, 0.1, -0.5, -0.25, 0.1, 0.5, -0.25, -0.1, 0.5, 0.25, -0.1, -0.5, -0.25, 0.1, -0.5, -0.25, -0.1, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_svyyx"]
material = SubResource("StandardMaterial3D_svyyx")
size = Vector3(0.2, 0.1, 0.1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bfb71"]
points = PackedVector3Array(0.1, 0.05, 0.05, 0.1, 0.05, -0.05, -0.1, 0.05, 0.05, 0.1, -0.05, 0.05, 0.1, -0.05, -0.05, -0.1, 0.05, -0.05, -0.1, -0.05, 0.05, -0.1, -0.05, -0.05)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ykvnc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gl0xr"]
albedo_color = Color(0.157274, 0.157274, 0.157274, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_gl0xr"]
material = SubResource("StandardMaterial3D_gl0xr")
top_radius = 0.2
bottom_radius = 0.2
height = 0.1
radial_segments = 12

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_br0rw"]
points = PackedVector3Array(0, -0.05, -0.2, -0.1, -0.05, -0.173218, 0, 0.05, -0.2, 0.1, -0.05, -0.173218, -0.173218, -0.05, -0.1, -0.1, 0.05, -0.173218, 0.1, 0.05, -0.173218, 0.173179, -0.05, -0.100039, -0.2, -0.05, 0, -0.173218, 0.05, -0.1, 0.173179, 0.05, -0.100039, 0.2, -0.05, 0, -0.2, 0.05, 0, -0.173218, -0.05, 0.0999608, 0.2, 0.05, 0, 0.173179, -0.05, 0.1, -0.173218, 0.05, 0.0999608, -0.1, -0.05, 0.173179, 0.173179, 0.05, 0.1, 0.1, -0.05, 0.173179, -0.1, 0.05, 0.173179, 0, -0.05, 0.2, 0.1, 0.05, 0.173179, 0, 0.05, 0.2)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_i42o3"]

[node name="Robot" type="Node3D"]
physics_interpolation_mode = 1
script = ExtResource("1_svyyx")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.962446, 0.271474, 0, -0.271474, 0.962446, 0, 1.31828, 1.83989)
fov = 60.0
script = ExtResource("2_bfb71")

[node name="Body" type="RigidBody3D" parent="."]
mass = 0.1

[node name="body_mesh" type="MeshInstance3D" parent="Body"]
mesh = SubResource("BoxMesh_br0rw")
skeleton = NodePath("../..")

[node name="body_collision" type="CollisionShape3D" parent="Body"]
shape = SubResource("ConvexPolygonShape3D_svyyx")

[node name="body_mesh2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, -0.35)
mesh = SubResource("BoxMesh_svyyx")

[node name="body_collision2" type="CollisionShape3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, -0.35)
shape = SubResource("ConvexPolygonShape3D_bfb71")

[node name="Re_R_axies" type="HingeJoint3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.25, 0, 0.25)
node_a = NodePath("../Body")
node_b = NodePath("../Re_R_Wheel")
motor/enable = true
motor/target_velocity = 0.0

[node name="Re_L_axies" type="HingeJoint3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.25, 0, 0.25)
node_a = NodePath("../Body")
node_b = NodePath("../Re_L_Wheel")
motor/enable = true
motor/target_velocity = 0.0

[node name="Fr_L_axies" type="HingeJoint3D" parent="."]
transform = Transform3D(-2.23517e-07, 0, 1, 0, 1, 0, -1, 0, -2.23517e-07, -0.25, 0, -0.25)
node_a = NodePath("../Body")
node_b = NodePath("../Fr_L_Wheel")
motor/enable = true
motor/target_velocity = 0.0

[node name="Fr_R_axies" type="HingeJoint3D" parent="."]
transform = Transform3D(-2.18557e-07, 0, 1, 0, 1, 0, -1, 0, -2.18557e-07, 0.25, 0, -0.25)
node_a = NodePath("../Body")
node_b = NodePath("../Fr_R_Wheel")
motor/enable = true
motor/target_velocity = 0.0

[node name="Fr_R_Wheel" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, -0.25)
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_ykvnc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Fr_R_Wheel"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_gl0xr")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fr_R_Wheel"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_br0rw")

[node name="Fr_L_Wheel" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, -0.25)
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_i42o3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Fr_L_Wheel"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_gl0xr")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fr_L_Wheel"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_br0rw")

[node name="Re_R_Wheel" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0.25)
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_ykvnc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Re_R_Wheel"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_gl0xr")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Re_R_Wheel"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_br0rw")

[node name="Re_L_Wheel" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 0.25)
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_i42o3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Re_L_Wheel"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_gl0xr")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Re_L_Wheel"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_br0rw")
